--- a/models/Logistic_Regression.ipynb
+++ b/models/Logistic_Regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,14 +32,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a787ac3d119848169968c1d7f73ad5f8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating train split: 0 examples [00:00, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "13696b3642744bc7b28bb05d137c6874",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating train split: 0 examples [00:00, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "real_data = load_dataset(\"csv\", data_files=\"datasets/FakeNewsDetection/fakenewsdetection_real.csv\")[\"train\"]\n",
+    "real_data = load_dataset(\"csv\", data_files=\"../datasets/FakeNewsDetection/fakenewsdetection_real.csv\")[\"train\"]\n",
     "real_data = real_data.add_column(\"label\", [0] * len(real_data))\n",
     "\n",
-    "fake_data = load_dataset(\"csv\", data_files=\"datasets/FakeNewsDetection/fakenewsdetection_fake.csv\")[\"train\"]\n",
+    "fake_data = load_dataset(\"csv\", data_files=\"../datasets/FakeNewsDetection/fakenewsdetection_fake.csv\")[\"train\"]\n",
     "fake_data = fake_data.add_column(\"label\", [1] * len(fake_data))\n",
     "\n",
     "data = concatenate_datasets([real_data, fake_data])\n"
