2 new datasets and NaN check

--- a/prepare_datasets/Fake News Corpus/process_dataset.ipynb
+++ b/prepare_datasets/Fake News Corpus/process_dataset.ipynb
@@ -4,6 +4,28 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "load_dataset()\n",
+      "combine_text_columns()\n",
+      "split_data()\n",
+      "extract_data()\n",
+      "evaluate_model()\n",
+      "detect_missing_values()\n"
+     ]
+    }
+   ],
+   "source": [
+    "%run ../../common_functions.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd"
@@ -18,34 +40,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.read_csv(\"FakeNewsCorpus.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['Unnamed: 0', 'id', 'domain', 'type', 'url', 'content', 'scraped_at',\n",
-       "       'inserted_at', 'updated_at', 'title', 'authors', 'keywords',\n",
-       "       'meta_keywords', 'meta_description', 'tags', 'summary', 'source'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.columns"
    ]
   },
   {
@@ -57,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,93 +78,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>type</th>\n",
-       "      <th>content</th>\n",
-       "      <th>title</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>reliable</td>\n",
-       "      <td>Facebook/DestinyTheGame Promo image for \"Desti...</td>\n",
-       "      <td>'Destiny 2' News: Bungie Addresses Player Comp...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>reliable</td>\n",
-       "      <td>(Screenshot: Facebook) Dr. Melina Abdullah, pr...</td>\n",
-       "      <td>Professor Conducts Libation to Summon Spirits ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>reliable</td>\n",
-       "      <td>(Photo: Reuters) The teams of North and South ...</td>\n",
-       "      <td>'Ghost Ship' With 8 Dead N. Koreans Washes Up ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>reliable</td>\n",
-       "      <td>(Photo: Reuters/Dado Ruvic) Facebook.\\n\\nUPDAT...</td>\n",
-       "      <td>Facebook Lifts Ban on Paid Ads for Pro-Life Fi...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>reliable</td>\n",
-       "      <td>(Screencap: YouTube/Tidningen Dagen) Annahita ...</td>\n",
-       "      <td>Iranian Christian Convert Leads 1,500 Muslims ...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       type                                            content  \\\n",
-       "0  reliable  Facebook/DestinyTheGame Promo image for \"Desti...   \n",
-       "1  reliable  (Screenshot: Facebook) Dr. Melina Abdullah, pr...   \n",
-       "2  reliable  (Photo: Reuters) The teams of North and South ...   \n",
-       "3  reliable  (Photo: Reuters/Dado Ruvic) Facebook.\\n\\nUPDAT...   \n",
-       "4  reliable  (Screencap: YouTube/Tidningen Dagen) Annahita ...   \n",
-       "\n",
-       "                                               title  \n",
-       "0  'Destiny 2' News: Bungie Addresses Player Comp...  \n",
-       "1  Professor Conducts Libation to Summon Spirits ...  \n",
-       "2  'Ghost Ship' With 8 Dead N. Koreans Washes Up ...  \n",
-       "3  Facebook Lifts Ban on Paid Ads for Pro-Life Fi...  \n",
-       "4  Iranian Christian Convert Leads 1,500 Muslims ...  "
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Missing values per column:\n",
+      "type       0\n",
+      "content    0\n",
+      "title      0\n",
+      "dtype: int64\n",
+      "\n",
+      "Total missing values in DataFrame: 0\n",
+      "\n",
+      "Columns with missing values: []\n"
+     ]
     }
    ],
    "source": [
-    "df.head()"
+    "detect_missing_values(df)"
    ]
   },
   {
