--- a/prepare_datasets/Fakeddit/process_dataset.ipynb
+++ b/prepare_datasets/Fakeddit/process_dataset.ipynb
@@ -4,6 +4,28 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "load_dataset()\n",
+      "combine_text_columns()\n",
+      "split_data()\n",
+      "extract_data()\n",
+      "evaluate_model()\n",
+      "detect_missing_values()\n"
+     ]
+    }
+   ],
+   "source": [
+    "%run ../../common_functions.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd"
@@ -18,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,11 +93,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Missing values per column:\n",
+      "title    73840\n",
+      "label        0\n",
+      "dtype: int64\n",
+      "\n",
+      "Total missing values in DataFrame: 73840\n",
+      "\n",
+      "Columns with missing values: ['title']\n"
+     ]
+    }
+   ],
+   "source": [
+    "detect_missing_values(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.dropna(inplace=True)\n",
+    "df = df.dropna(subset=[\"title\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "df = df[df[\"title\"].str.len() > 150]"
    ]
   },
