--- a/prepare_datasets/WELFake/process_dataset.ipynb
+++ b/prepare_datasets/WELFake/process_dataset.ipynb
@@ -4,6 +4,28 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "load_dataset()\n",
+      "combine_text_columns()\n",
+      "split_data()\n",
+      "extract_data()\n",
+      "evaluate_model()\n",
+      "detect_missing_values()\n"
+     ]
+    }
+   ],
+   "source": [
+    "%run ../../common_functions.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd"
@@ -18,11 +40,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"../raw_datasets/WELFake/WELFake_Dataset.csv\")"
+    "df = pd.read_csv(\"WELFake_Dataset.csv\")"
    ]
   },
   {
@@ -34,11 +56,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "df.drop(columns=[\"Unnamed: 0\"], axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Missing values per column:\n",
+      "title    558\n",
+      "text      39\n",
+      "label      0\n",
+      "dtype: int64\n",
+      "\n",
+      "Total missing values in DataFrame: 597\n",
+      "\n",
+      "Columns with missing values: ['title', 'text']\n"
+     ]
+    }
+   ],
+   "source": [
+    "detect_missing_values(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Drop rows with empty text columns and keep rows with empty title columns (but use \" \" instead)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.dropna(subset=['text'])\n",
+    "df['title'] = df['title'].fillna(' ')"
    ]
   },
   {
