--- a/prepare_datasets/Fake News Prediction/process_dataset.ipynb
+++ b/prepare_datasets/Fake News Prediction/process_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,11 +40,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"Climate-FEVER.csv\")"
+    "df = pd.read_csv(\"news.csv\")"
    ]
   },
   {
@@ -56,16 +56,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.drop(columns=[\"evidences\", \"claim_id\"], axis=1, inplace=True)"
+    "df.drop(columns=[\"Unnamed: 0\"], axis=1, inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -73,8 +73,9 @@
      "output_type": "stream",
      "text": [
       "Missing values per column:\n",
-      "claim          0\n",
-      "claim_label    0\n",
+      "title    0\n",
+      "text     0\n",
+      "label    0\n",
       "dtype: int64\n",
       "\n",
       "Total missing values in DataFrame: 0\n",
@@ -88,27 +89,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Label Justification\n",
-    "\n",
-    "| Original Label | Meaning         | Binary Label |\n",
-    "| -------------- | --------------- | ------------ |\n",
-    "| 0              | Supports        | Real (0)     |\n",
-    "| 1              | Refutes         | Fake (1)     |\n",
-    "| 2              | Not enough info | Real (0)     |\n",
-    "| 3              | Disputed        | Fake (1)     |\n"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df[\"label\"] = df[\"claim_label\"].map(lambda x: 1 if x in [1, 3] else 0)\n",
-    "df.drop(columns=[\"claim_label\"], axis=1, inplace=True)"
+    "df[\"label\"] = df[\"label\"].apply(lambda x: 0 if x == \"REAL\" else 1)"
    ]
   },
   {
@@ -120,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
