--- a/prepare_datasets/FineFake/process_dataset.ipynb
+++ b/prepare_datasets/FineFake/process_dataset.ipynb
@@ -4,6 +4,28 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "load_dataset()\n",
+      "combine_text_columns()\n",
+      "split_data()\n",
+      "extract_data()\n",
+      "evaluate_model()\n",
+      "detect_missing_values()\n"
+     ]
+    }
+   ],
+   "source": [
+    "%run ../../common_functions.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd"
@@ -18,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,6 +72,30 @@
     "                 \"date\",\n",
     "                 \"comment\"],\n",
     "        axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Missing values per column:\n",
+      "text     0\n",
+      "label    0\n",
+      "dtype: int64\n",
+      "\n",
+      "Total missing values in DataFrame: 0\n",
+      "\n",
+      "Columns with missing values: []\n"
+     ]
+    }
+   ],
+   "source": [
+    "detect_missing_values(df)"
    ]
   },
   {
