--- a/prepare_datasets/LIAR2/process_dataset.ipynb
+++ b/prepare_datasets/LIAR2/process_dataset.ipynb
@@ -2,6 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "load_dataset()\n",
+      "combine_text_columns()\n",
+      "split_data()\n",
+      "extract_data()\n",
+      "evaluate_model()\n",
+      "detect_missing_values()\n"
+     ]
+    }
+   ],
+   "source": [
+    "%run ../../common_functions.py"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
@@ -18,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,6 +73,32 @@
     "                 \"context\", \n",
     "                 \"justification\"], \n",
     "        axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Missing values per column:\n",
+      "id           0\n",
+      "label        0\n",
+      "statement    0\n",
+      "speaker      0\n",
+      "dtype: int64\n",
+      "\n",
+      "Total missing values in DataFrame: 0\n",
+      "\n",
+      "Columns with missing values: []\n"
+     ]
+    }
+   ],
+   "source": [
+    "detect_missing_values(df)"
    ]
   },
   {
