--- a/prepare_datasets/Source based FN/process_dataset.ipynb
+++ b/prepare_datasets/Source based FN/process_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,11 +40,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"Climate-FEVER.csv\")"
+    "df = pd.read_csv(\"news_articles.csv\")"
    ]
   },
   {
@@ -56,16 +56,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.drop(columns=[\"evidences\", \"claim_id\"], axis=1, inplace=True)"
+    "df.drop(columns=[\"author\",\n",
+    "                 \"published\",\n",
+    "                 \"language\",\n",
+    "                 \"site_url\",\n",
+    "                 \"main_img_url\",\n",
+    "                 \"type\",\n",
+    "                 \"title_without_stopwords\",\n",
+    "                 \"text_without_stopwords\",\n",
+    "                 \"hasImage\"], \n",
+    "        axis=1, inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -73,13 +82,14 @@
      "output_type": "stream",
      "text": [
       "Missing values per column:\n",
-      "claim          0\n",
-      "claim_label    0\n",
+      "title     0\n",
+      "text     46\n",
+      "label     1\n",
       "dtype: int64\n",
       "\n",
-      "Total missing values in DataFrame: 0\n",
+      "Total missing values in DataFrame: 47\n",
       "\n",
-      "Columns with missing values: []\n"
+      "Columns with missing values: ['text', 'label']\n"
      ]
     }
    ],
@@ -88,27 +98,21 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "### Label Justification\n",
-    "\n",
-    "| Original Label | Meaning         | Binary Label |\n",
-    "| -------------- | --------------- | ------------ |\n",
-    "| 0              | Supports        | Real (0)     |\n",
-    "| 1              | Refutes         | Fake (1)     |\n",
-    "| 2              | Not enough info | Real (0)     |\n",
-    "| 3              | Disputed        | Fake (1)     |\n"
+    "df = df.dropna(subset=[\"text\", \"label\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df[\"label\"] = df[\"claim_label\"].map(lambda x: 1 if x in [1, 3] else 0)\n",
-    "df.drop(columns=[\"claim_label\"], axis=1, inplace=True)"
+    "df[\"label\"] = df[\"label\"].apply(lambda x: 0 if x == \"Real\" else 1)"
    ]
   },
   {
@@ -120,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
