--- a/prepare_datasets/Fake News Prediction/process_dataset.ipynb
+++ b/prepare_datasets/Fake News Prediction/process_dataset.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "load_dataset()\n",
+      "read_dataset()\n",
+      "read_all_datasets()\n",
       "combine_text_columns()\n",
       "split_data()\n",
       "extract_data()\n",
@@ -24,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,11 +41,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"news.csv\")"
+    "df = pd.read_csv(\"Fake News Prediction.csv\")"
    ]
   },
   {
@@ -56,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,12 +124,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "real_df.to_csv(\"real.csv\", sep=\",\", index=False)\n",
-    "fake_df.to_csv(\"fake.csv\", sep=\",\", index=False)"
+    "real_df.to_csv(\"../../datasets/Fake News Prediction/real.csv\", sep=\",\", index=False)\n",
+    "fake_df.to_csv(\"../../datasets/Fake News Prediction/fake.csv\", sep=\",\", index=False)"
    ]
   }
  ],
