--- a/prepare_datasets/FineFake/process_dataset.ipynb
+++ b/prepare_datasets/FineFake/process_dataset.ipynb
@@ -9,7 +9,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "load_dataset()\n",
+      "read_dataset()\n",
+      "read_all_datasets()\n",
       "combine_text_columns()\n",
       "split_data()\n",
       "extract_data()\n",
@@ -107,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,12 +125,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "real_df.to_csv(\"real.csv\", sep=\",\", index=False)\n",
-    "fake_df.to_csv(\"fake.csv\", sep=\",\", index=False)"
+    "real_df.to_csv(\"../../datasets/FineFake/real.csv\", sep=\",\", index=False)\n",
+    "fake_df.to_csv(\"../../datasets/FineFake/fake.csv\", sep=\",\", index=False)"
    ]
   }
  ],
