--- a/prepare_datasets/LIAR2/process_dataset.ipynb
+++ b/prepare_datasets/LIAR2/process_dataset.ipynb
@@ -9,7 +9,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "load_dataset()\n",
+      "read_dataset()\n",
+      "read_all_datasets()\n",
       "combine_text_columns()\n",
       "split_data()\n",
       "extract_data()\n",
@@ -119,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,12 +153,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "real_df.to_csv(\"real.csv\", sep=\",\", index=False)\n",
-    "fake_df.to_csv(\"fake.csv\", sep=\",\", index=False)"
+    "real_df.to_csv(\"../../datasets/LIAR2/real.csv\", sep=\",\", index=False)\n",
+    "fake_df.to_csv(\"../../datasets/LIAR2/fake.csv\", sep=\",\", index=False)"
    ]
   }
  ],
