--- a/prepare_datasets/Source based FN/process_dataset.ipynb
+++ b/prepare_datasets/Source based FN/process_dataset.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "load_dataset()\n",
+      "read_dataset()\n",
+      "read_all_datasets()\n",
       "combine_text_columns()\n",
       "split_data()\n",
       "extract_data()\n",
@@ -24,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,11 +41,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"news_articles.csv\")"
+    "df = pd.read_csv(\"Source based FN.csv\")"
    ]
   },
   {
@@ -56,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,12 +142,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "real_df.to_csv(\"real.csv\", sep=\",\", index=False)\n",
-    "fake_df.to_csv(\"fake.csv\", sep=\",\", index=False)"
+    "real_df.to_csv(\"../../datasets/Source based FN/real.csv\", sep=\",\", index=False)\n",
+    "fake_df.to_csv(\"../../datasets/Source based FN/fake.csv\", sep=\",\", index=False)"
    ]
   }
  ],
