--- a/prepare_datasets/ISO Fake News/process_dataset.ipynb
+++ b/prepare_datasets/ISO Fake News/process_dataset.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "load_dataset()\n",
+      "read_dataset()\n",
+      "read_all_datasets()\n",
       "combine_text_columns()\n",
       "split_data()\n",
       "extract_data()\n",
@@ -24,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,12 +41,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "real_df = pd.read_csv(\"raw_true.csv\")\n",
-    "fake_df = pd.read_csv(\"raw_fake.csv\")"
+    "df = pd.read_csv(\"ISO Fake News.csv\")"
    ]
   },
   {
@@ -57,17 +57,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "real_df.drop(columns=[\"date\", \"subject\"], axis=1, inplace=True)\n",
-    "fake_df.drop(columns=[\"date\", \"subject\"], axis=1, inplace=True)"
+    "df.drop(columns=[\"date\", \"subject\"], axis=1, inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -77,6 +76,7 @@
       "Missing values per column:\n",
       "title    0\n",
       "text     0\n",
+      "label    0\n",
       "dtype: int64\n",
       "\n",
       "Total missing values in DataFrame: 0\n",
@@ -86,41 +86,17 @@
     }
    ],
    "source": [
-    "detect_missing_values(real_df)"
+    "detect_missing_values(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Missing values per column:\n",
-      "title    0\n",
-      "text     0\n",
-      "dtype: int64\n",
-      "\n",
-      "Total missing values in DataFrame: 0\n",
-      "\n",
-      "Columns with missing values: []\n"
-     ]
-    }
-   ],
-   "source": [
-    "detect_missing_values(fake_df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "real_df[\"label\"] = 0\n",
-    "fake_df[\"label\"] = 1"
+    "real_df = df[df[\"label\"] == 0]\n",
+    "fake_df = df[df[\"label\"] == 1]"
    ]
   },
   {
@@ -132,12 +108,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "real_df.to_csv(\"real.csv\", sep=\",\", index=False)\n",
-    "fake_df.to_csv(\"fake.csv\", sep=\",\", index=False)"
+    "real_df.to_csv(\"../../datasets/ISO Fake News/real.csv\", sep=\",\", index=False)\n",
+    "fake_df.to_csv(\"../../datasets/ISO Fake News/fake.csv\", sep=\",\", index=False)"
    ]
   }
  ],
