Rename ISO Fake News -> ISOT Fake News

--- a/models/Logistic_Regression copy.ipynb
+++ b/models/Logistic_Regression copy.ipynb
@@ -64,7 +64,7 @@
     }
    ],
    "source": [
-    "data = read_dataset(dataset_path=\"../prepare_datasets/ISO Fake News\")"
+    "data = read_dataset(dataset_path=\"../prepare_datasets/ISOT Fake News\")"
    ]
   },
   {
