--- a/prepare_datasets/ISOT Fake News/make_dataset.ipynb
+++ b/prepare_datasets/ISOT Fake News/make_dataset.ipynb
@@ -65,7 +65,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(\"ISO Fake News.csv\", sep=\",\", index=False)"
+    "df.to_csv(\"ISOT Fake News.csv\", sep=\",\", index=False)"
    ]
   }
  ],
