--- a/prepare_datasets/ISOT Fake News/process_dataset.ipynb
+++ b/prepare_datasets/ISOT Fake News/process_dataset.ipynb
@@ -45,7 +45,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"ISO Fake News.csv\")"
+    "df = pd.read_csv(\"ISOT Fake News.csv\")"
    ]
   },
   {
@@ -112,8 +112,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "real_df.to_csv(\"../../datasets/ISO Fake News/real.csv\", sep=\",\", index=False)\n",
-    "fake_df.to_csv(\"../../datasets/ISO Fake News/fake.csv\", sep=\",\", index=False)"
+    "real_df.to_csv(\"../../datasets/ISOT Fake News/real.csv\", sep=\",\", index=False)\n",
+    "fake_df.to_csv(\"../../datasets/ISOT Fake News/fake.csv\", sep=\",\", index=False)"
    ]
   }
  ],
